TEST_PROGRAMS/VALID/08/slices.go
package main;
var x []int;
func main(){
    x = append(x,1);
    x = append(x,2);
    x = append(x,3);
}
