TEST_PROGRAMS/invalid/01/#1.7.go
package main

// semi-colon insertion on rule #1 only

var foo = 3;
var x []int;
var y struct {
  x,y,z int }
